Changed the policy name to a common name